@@ -788,7 +788,10 @@ namespaceImportFrom <- function(self, ns, vars, generics, packages, from = "non-
         old <- as.character(spec)
         new <- names(spec)
         if (is.null(new)) new <- old
-        else new[new == ""] <- old[new == ""]
+        else {
+            change <- !nzchar(new)
+            new[change] <- old[change]
+        }
         names(old) <- new
         old
     }
@@ -1019,7 +1022,10 @@ namespaceExport <- function(ns, vars) {
             old <- as.character(spec)
             new <- names(spec)
             if (is.null(new)) new <- old
-            else new[new == ""] <- old[new == ""]
+            else {
+                change <- !nzchar(new)
+                new[change] <- old[change]
+            }
             names(old) <- new
             old
         }
