@@ -97,7 +97,8 @@ strptime(x, format, tz = "")
     \item{\code{\%M}}{Minute as decimal number (00--59).}
     \item{\code{\%p}}{AM/PM indicator in the locale.  Used in
       conjunction with \code{\%I} and \bold{not} with \code{\%H}.  An
-      empty string in some locales.
+      empty string in some locales (and the behviour is undefined if
+      used for input in such a locale).
   
       Some platforms accept \code{\%P} for output, which uses a lower-case
       version: others will output \code{P}.} 
